// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find nearest features for a node 1`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      -77.0243788,
      38.902298,
    ],
    "type": "Point",
  },
  "properties": Object {
    "distance": 0.0018479514421559796,
    "id": "node/4294969105",
  },
  "type": "Feature",
}
`;

exports[`find nearest features for a node 2`] = `
Object {
  "geometry": Object {
    "coordinates": Array [
      -77.02449962009433,
      38.90251651820502,
    ],
    "type": "Point",
  },
  "properties": Object {
    "dist": 0.0018370373094811034,
    "index": 2,
    "location": 0.3092503207620726,
  },
  "type": "Feature",
}
`;

exports[`find nearest features for a node 3`] = `null`;
